# gsz

./: README.md  achievement.py  main.py  pyproject.toml
gsz/: __init__.py  format.py
gsz/bbs/: __init__.py  bilibili.py  client.py  exception.py  user_post_list.py
gsz/bbs/model/: __init__.py  base.py  bilibili.py  image.py  structured_content.py  user_post.py  vod.py
gsz/gi/: data.py
gsz/gi/excel/: __init__.py  avatar.py  base.py  npc.py
gsz/gi/view/: __init__.py  avatar.py  base.py  npc.py
gsz/sr/: __init__.py  data.py
gsz/sr/act/: __init__.py  act.py  base.py  caption.py  dialogue.py  mission.py  option.py  performance.py  predicate.py  rogue.py  sequence.py  talk.py  task.py  value.py  wiki.py
gsz/sr/act/model/: __init__.py  act.py  base.py  camera.py  caption.py  dialogue.py  input.py  mission.py  option.py  (+7 more)
gsz/sr/excel/: __init__.py  achievement.py  aliases.py  avatar.py  base.py  book.py  challenge.py  fate.py  grid_fight.py  hipplen.py  item.py  message.py  misc.py  mission.py  monster.py  monster_guide.py  performance.py  planet_fes.py  rogue.py  rogue_tourn.py  stage.py  talk.py  tutorial.py
gsz/sr/story/: __init__.py  base.py  story.py  talk.py  task.py
gsz/sr/templates/: 书籍.jinja2  周期演算.jinja2  奇物.jinja2  敌人.jinja2  末日幻影单期.jinja2  混沌回忆单期3.jinja2  角色.jinja2  角色图鉴.jinja2  角色语音.jinja2
gsz/sr/view/: __init__.py  achievement.py  act.py  avatar.py  base.py  book.py  challenge.py  fate.py  grid_fight.py  hipplen.py  item.py  message.py  misc.py  mission.py  monster.py  monster_guide.py  performance.py  planet_fes.py  rogue.py  rogue_tourn.py  stage.py  story.py  talk.py  tutorial.py
gsz/templates/: book-series.jinja2  enemy.jinja2  书籍.jinja2  周期演算.jinja2  奇物.jinja2  差分宇宙方程.jinja2  敌人.jinja2  末日幻影单期.jinja2  祝福.jinja2  虚构叙事单期2.jinja2
gsz/zzz/: __init__.py  data.py
gsz/zzz/filecfg/: __init__.py  aliases.py  base.py  message.py  partner.py  post.py  quest.py
gsz/zzz/view/: __init__.py  base.py  message.py  partner.py  post.py  quest.py
templates/: book-series.jinja2  enemy.jinja2
tests/: test_fmt.py  test_format.py  test_tag.py
