[project]
name = "gsz"
version = "0.1.0"
description = "A tool for g, s and z"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false

[tool.setuptools.package-data]
gsz = ["templates/*.jinja2"]

[tool.pyright]
reportAny = false
reportImportCycles = false

[tool.ruff]
include = ["\\.pyi?$"]
line-length = 120
target-version = 'py313'

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "PL", # pylint
    "UP",  # pyupgrade
    "PERF", # Perflint
    "FLY", # flynt
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RSE", # flake8-raise
    "G", # flake8-logging-format
    "ISC", # flake8-implicit-str-concat
    "PT", # flake8-pytest-style
    "ASYNC", # flake8-async
    "TCH", # flake8-type-checking
    "SLOT", # flake8-slots-slot
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "INP", # flake8-no-pep420
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
    "ARG", # flake8-unused-arguments
    "ARG" , # flake8-print
    "FURB", # refurb
    "AIR", # Airflow
    "TRY", # tryceratops
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
    "PLR0913", # Too many arguments in function definition
    "PLR0917", # Too many positional arguments
    "PLR2004", #  Magic value used in comparison, consider replacing `x` with a constant variable
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY400", #  Use logging.exception instead of logging.xxxx
    "ISC001", #  The following rule may cause conflicts when used with the formatter: ISC001
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
